--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="https://fav.farm/🎚️" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+			rel="stylesheet"
+		/>
 		<title>Calculadora de IMC</title>
 	</head>
-	<body>
+	<body class="bg-zinc-100 min-h-screen py-20">
 		<div id="root"></div>
 		<script type="module" src="/src/main.tsx"></script>
 	</body>
